--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"game2.falixserver.net",
-	"port": "53961",
-	"name": "EZ_GG_LIV_BOT"
+	"ip":"game6.falixserver.net",
+	"port": "64361",
+	"name": "i_hate_hoes"
 }
