--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"game6.falixserver.net",
-	"port": "64361",
-	"name": "i_hate_hoes"
+	"ip":"game1.falixserver.net",
+	"port": "65012",
+	"name": "EZGG_LIV_BOT"
 }
